fix: dark mode style bug

--- a/src/action-sheet/action-sheet.less
+++ b/src/action-sheet/action-sheet.less
@@ -5,6 +5,7 @@
 @action-sheet-list-item-height: var(--td-action-sheet-list-item-height, 112rpx);
 @action-sheet-list-item-disabled-color: var(--td-action-sheet-list-item-disabled-color, @text-color-disabled);
 @action-sheet-border-color: var(--td-action-sheet-border-color, @border-level-1-color);
+@action-sheet-gap-color: var(--td-action-sheet-gap-color, @bg-color-page);
 @action-sheet-color: var(--td-action-sheet-color, @text-color-primary);
 @action-sheet-border-radius: var(--td-action-sheet-border-radius, @radius-extra-large);
 @action-sheet-description-color: var(--td-action-sheet-description-color, @text-color-placeholder);
@@ -118,7 +119,7 @@
 
   &__gap-list {
     height: 16rpx;
-    background-color: @action-sheet-border-color;
+    background-color: @action-sheet-gap-color;
   }
 
   &__gap-grid {
