--- a/src/checkbox/checkbox.less
+++ b/src/checkbox/checkbox.less
@@ -8,7 +8,7 @@
 @checkbox-title-line-height: var(--td-checkbox-title-line-height, 48rpx);
 @checkbox-description-line-height: var(--td-checkbox-description-line-height, 44rpx);
 @checkbox-vertical-padding: var(--td-checkbox-vertical-padding, 32rpx);
-@checkbox-bg-color: var(--td-checkbox-bg-color, @bg-color-secondarycontainer);
+@checkbox-bg-color: var(--td-checkbox-bg-color, @bg-color-container);
 @checkbox-border-color: var(--td-checkbox-border-color, @component-stroke);
 @checkbox-title-color: var(--td-checkbox-title-color, @text-color-primary);
 @checkbox-title-disabled-color: var(--td-checkbox-title-disabled-color, @text-color-disabled);
@@ -211,7 +211,7 @@
     padding-top: 16rpx;
     padding-bottom: 16rpx;
     text-align: center;
-    background-color: @bg-color-page;
+    background-color: @bg-color-secondarycontainer;
     border-radius: 12rpx;
 
     &.@{checkbox}--checked {
