--- a/src/slider/slider.less
+++ b/src/slider/slider.less
@@ -6,7 +6,7 @@
 @slider-bar-height: var(--td-slider-bar-height, 8rpx);
 @slider-dot-bg-color: var(--td-slider-dot-bg-color, #fff);
 @slider-dot-size: var(--td-slider-dot-size, 40rpx);
-@slider-dot-color: var(--td-slider-dot-color, @bg-color-secondarycontainer);
+@slider-dot-color: var(--td-slider-dot-color, @component-border);
 @slider-default-color: var(--td-slider-default-color, @bg-color-component);
 @slider-default-disabled-color: var(--td-slider-default-color, @bg-color-component-disabled);
 @slider-active-color: var(--td-slider-active-color, @brand-color);
