--- a/src/switch/switch.less
+++ b/src/switch/switch.less
@@ -24,7 +24,7 @@
 @switch-dot-horizontal-margin: var(--td-switch-dot-horizontal-margin, 6rpx);
 @switch-dot-plain-horizontal-margin: var(--td-switch-dot-plain-horizontal-margin, 10rpx);
 @switch-dot-shadow: var(--td-switch-dot-shadow, @shadow-1);
-@switch-dot-border-color: var(--td-switch-dot-border-color, @gray-color-1);
+@switch-dot-border-color: var(--td-switch-dot-border-color, @gray-color-4);
 
 // large dot
 @switch-dot-large-size: var(--td-switch-dot-large-size, 52rpx);
